# BNPL-Management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecs-task-definition.json  pyproject.toml  requirements-dev.txt  requirements-forecast.txt  requirements.txt  transaction_classifier.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: dependencies.py  main.py
app/core/: clock.py  config.py  database.py  errors.py  money.py
data/: demo_transactions_10001234.csv  summary_by_cif_month.csv
docs/: api.md  architecture.md  deployment.md  implementation_plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/public/: api.js  app.jsx  config.js  index.original.html  rm-screens.jsx  store.js  styles.css  ui.jsx  user-screens-a.jsx  user-screens-b.jsx  user-screens-c.jsx
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
models/: pd_model.pkl
scripts/: train_pd_model.py
tests/integration/: test_alerts_forecast_api.py  test_api.py  test_confidence_api.py  test_consent_api.py  test_copilot_api.py  test_feedback_api.py  test_forecast_prophet.py  test_forecasting_api.py  test_ingestion_api.py  test_obligations_api.py  test_planning_api.py  test_planning_apr_api.py  test_planning_recommend_api.py  test_portfolio_api.py  test_rm_override_api.py  test_sqlalchemy_repository.py
tests/unit/: test_advisory_dto.py  test_alerts.py  test_allocation.py  test_analysis_service.py  test_bedrock_scorer.py  (+35 more)
(+183 files in other folders)
