[project]
name = "bnpl-assistant"
version = "0.1.0"
description = "BNPL Assistant — personal finance advisory MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "boto3>=1.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: enums deliberately use `(str, Enum)` rather than `StrEnum` for
# explicit, self-documenting string values across the domain value objects.
ignore = ["UP042"]

# FastAPI routers use `Depends()` in argument defaults — the canonical
# dependency-injection idiom that B008 (function call in default arg) flags.
[tool.ruff.lint.per-file-ignores]
"app/modules/**/api/router.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "pandas.*"]
ignore_missing_imports = true
